2006-10-12  Alexander Dupuy  <alex.dupuy@counterstorm.com>

	* src/timeout.c: eliminate some signal handler race condition that
	returned timeout status (SIGALRM) if child finished just fast enough

2006-09-28  James Tanis  <jtt@counterstorm.com>

	* lib/b_string.c: Eliminate useless debugging #defines

2006-09-27  Seth Robertson  <seth@doe.sysdetect.com>

	* lib/mt19937-64.c (mt19937_init_by_array64): Plug a memory leak
	by eliminating some code which would never be called under the
	baka API, allow init_by_array to work more identically with public
	implementations, and at the same time, make things epsilon faster.
	Note that if we want to make things 1/epsilon faster, or at least
	much faster, consider http://www.cs.hmc.edu/~geoff/mtwist.html
	which would probably take a bit of porting and would be different
	from this version (would produce the 32 bit implementation random
	numbers instead of the 64 bit numbers our version generates).  Not
	a big deal for us.

2006-09-27  James Tanis  <jtt@swift.sysdetect.com>

	* lib/mt19937-64.c (mt19937_init_genrand64): Take mts as argument
	so that it 1) doesn't leak memory and 2) actually has an effect.

2006-09-05  Alex Dupuy  <alex.dupuy@counterstorm.com>

	* src/timeout.c: compatibility with netatalk timeout [-t optional],
	validate numeric options, allow signal names as well as numbers,
	better error messages, propagate child signal termination status

2006-08-31  Seth Robertson  <seth@counterstorm.com>

	* include/libbk.h, lib/b_shmipc.c, src/shmcat.c: #8397: Allow shared
	memory protocol to recover a little better from stale shmem segments

2006-08-17  Seth Robertson  <seth@counterstorm.com>

	* include/libbk.h, lib/b_shmipc.c, src/shmadm.c, src/shmcat.c: #8335:
	Do the three way handshake to validate that everyone is OK with	startup.
	Add generation number cum write init timestamp to shm header and diag
	program for value added diagnostics

2006-08-11  Seth Robertson  <seth@counterstorm.com>
